Added settings activity and postal code choosing

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -7,6 +7,8 @@
         android:inputType="text"
         android:key="@string/pref_location_key"
         android:singleLine="true"
-        android:title="@string/pref_location_label"></EditTextPreference>
+        android:title="@string/pref_location_label">
+
+    </EditTextPreference>
 
 </PreferenceScreen>
